# AnnealedSVGD_FWI

./: .gitignore  README.md  environment.yml  experiment_list.xlsx  install_env.sh  pyproject.toml
config/: config_example.yaml
config/exp/: 00_exp.yaml  01_exp.yaml  02_exp.yaml  03_exp.yaml  04_exp.yaml  05_exp.yaml  06_exp.yaml  07_exp.yaml  08_exp.yaml  09_exp.yaml  10_exp.yaml  11_exp.yaml  12_exp.yaml  13_exp.yaml  14_exp.yaml  15_exp.yaml  16_exp.yaml  17_exp.yaml  18_exp.yaml  19_exp.yaml  20_exp.yaml  21_exp.yaml  22_exp.yaml  23_exp.yaml  24_exp.yaml  25_exp.yaml  26_exp.yaml  27_exp.yaml  28_exp.yaml  29_exp.yaml  30_exp.yaml  31_exp.yaml  32_exp.yaml  33_exp.yaml  34_exp.yaml  35_exp.yaml  36_exp.yaml  37_exp.yaml  38_exp.yaml  39_exp.yaml
config/multiscale/: 00_multiscale.yaml  01_multiscale.yaml  02_multiscale.yaml  03_multiscale.yaml  04_multiscale.yaml  05_multiscale.yaml  06_multiscale.yaml  07_multiscale.yaml  08_multiscale.yaml  09_multiscale.yaml  10_multiscale.yaml  11_multiscale.yaml  12_multiscale.yaml  13_multiscale.yaml  14_multiscale.yaml  15_multiscale.yaml
data/: marmousi_portion.npy
notebooks/: 01_HDBSCAN_clustering.ipynb
results/: files.md
scripts/exp/: 00_exp.py  01_exp.py  02_exp.py  03_exp.py  04_exp.py  05_exp.py  06_exp.py  07_exp.py  08_exp.py  09_exp.py  10_exp.py  11_exp.py  12_exp.py  13_exp.py  14_exp.py  15_exp.py  16_exp.py  17_exp.py  18_exp.py  (+21 more)
svgdfwi/: annealing.py  fwi.py  kernel.py  perturbations.py  plots.py  svgd.py  utils.py
visualization/: results_visualization.py  results_visualization_multiscale.py
(+16 files in other folders)
