[build-system]
requires = [
    "setuptools >= 65",
    "setuptools_scm[toml]",
    "wheel",
]

[project]
name = "svgdfwi"
authors = [
    {name = "Miguel Corrales", email = "miguel.corrales@kaust.edu.sa"}
    {name = "Sean Berti", email = "sean.berti@unifi.it"},
    {name = "Matteo Ravasi", email = "matteo.ravasi@kaust.edu.sa"},
]
description = "FWI SVGD"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["inverse problems", "deep learning", "seismic"]
license = {text = "BSD 3-Clause License"}
classifiers = [
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Programming Language :: Python :: 3.12",
        "Topic :: Scientific/Engineering :: Mathematics",
    ]
dependencies = [
        "numpy >= 1.26.4",
        "pylops >= 2.0.0",
    ]
dynamic = ["version"]

[tool.setuptools.packages]
find = {}